# document_summarizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
evaluations/: run_eval.py
evaluations/cases/: evaluation_cases.json
evaluations/documents/: business_report.txt  document_with_missing_information.txt  poorly_structured_notes.txt  short_news_report.txt  technical_article.txt
evaluations/results/: bullets_evaluation_2026-07-23.json  comparison_tables_2026-07-23.json  executive_evaluation_2026-07-23.json  prompt_comparison_table_2026-07-23.md  technical_evaluation_2026-07-23.json
prompts/: bullets_v1.txt  executive_v1.txt  system.txt  technical_v1.txt
prompts/system_prompt/: system.txt
prompts/user_prompts/: bullets_v1.txt  executive_v1.txt  technical_v1.txt
prompts/user_prompts/v1/: technical_v1.txt
prompts/user_prompts/v2/: bullets_v2.txt  executive_v2.txt  technical_v2.txt
prompts/user_prompts/v3/: bullets_v3.txt  executive_v3.txt  technical_v3.txt
sample_documents/: sample.txt
src/: document_loader.py  evaluation_runner.py  evaluator.py  llm_client.py  main.py  output_parser.py  prompt_manager.py  schema.py  summarizer.py
src/templates/: prompt_template_files.py  summary_json_structure_template.py  summary_template.py
summary_output_json/: sample_summary.json
tests/: test_document_summarizer.py
